<resources>
    <string name="app_name">LEDILove</string>
    <string name="set">Setting</string>
    <string name="size">size</string>
    <string name="font">Font</string>
    <string name="special">Effects</string>
    <string name="bytes">Char</string>
    <string name="pageEffectAndModeSetting">Page Effect And Mode Setting</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="hold">Static</string>
    <string name="snow">Snow</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="flash">Flash</string>
    <string name="marquee">Marquee</string>
    <string name="comfirmAndSend">Comfirm and Send</string>
    <string name="speed">Speed</string>
    <string name="parameter_set">Set device parameter</string>
    <string name="battery_query">Query the battery</string>
    <string name="speed_set">Set speed</string>
    <string name="brightness_set">Set Brightness</string>
    <string name="device_rename">Rename Device</string>
    <string name="device_rename_hint">Please enter a new name</string>
    <string name="sendSpeed">Send Speed</string>
    <string name="sendBrightness">Send Brightness</string>
    <string name="brightness">Brightness</string>
    <string name="sendlist">Send List</string>
    <string name="send">Send</string>
    <string name="connectstate">Unconnected</string>
    <string name="notification_playing">Playing in sync</string>
    <string name="alignment">Alignment</string>
    <string name="share_app_introduce">An APP that focuses on LED display control</string>
    <string name="msg_number">Msg Number</string>
    <string name="music_built">Built music</string>
    <string name="music_local">Local music</string>
    <string name="wordType_normal">Normal</string>
    <string name="wordType_italic">Italic</string>
    <string name="wordType_bold">Bold</string>
    <string name="typeFace_arial">Arial</string>
    <string name="typeFace_roman">New Roman</string>
    <string name="typeFace_verdana">Verdana</string>
    <string name="typeFace_song">Song</string>
    <string name="typeFace_YaHei">YaHei</string>
    <string name="friend">WeChat friend</string>
    <string name="moments">WeChat Moments</string>
    <string name="qq_friend">QQ Friend</string>
    <string name="qq_zone">QQ Zone</string>
    <string name="share">Share :</string>
    <string name="to">to:</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="successfulOperation">Successful operation!</string>
    <string name="cancelOperation">Operation cancelled</string>
    <string name="successfulFailed">Successful failed!</string>
    <string name="hint">hint</string>
    <string name="connecttingSuccessful">Connection successful</string>
    <string name="sendsuccess">send success</string>
    <string name="sendfailed">send failed</string>
    <string name="bteOntTurnOn">Bluetooth not turned on</string>
    <string name="connectionTimedOut">connection timed out</string>
    <string name="failed2Obtainservice">Failed to obtain service</string>
    <string name="connectedfail">connection fail</string>
    <string name="Notificationfailed2open">Notification failed to open</string>
    <string name="connectionCasBeenDisconnected">The connection has been disconnected</string>
    <string name="sendOperationTimeout">Send operation timeout</string>
    <string name="pleaseEnterText">Please enter the text</string>
    <string name="pleasepoweron">Please send the boot command first</string>
    <string name="please_wait">The task is busy, please wait a moment..</string>
    <string name="dialog_reset">To reset the connection, please confirm.</string>
    <string name="dialog_positive">reset</string>
    <string name="dialog_negative">cancel</string>
    <string name="dialog_sending">be sending</string>
    <string name="out_of_max">out of maximum length, has been automatically intercepted!</string>
    <string name="ble_disconnect_confirm">The parameters you select are not consistent with the current connection device.
        If switched, the current connection will be disconnected!\n Please confirm whether to continue?</string>
    <string name="toast_exit_app">Press again to exit the application</string>
    <string name="toast_enter_preview">Enter the live preview mode</string>
    <string name="toast_exit_preview">Exit the live preview mode!</string>
    <string name="save_directory">Saved to:</string>
    <string name="error_device">Illegal bluetooth</string>
    <string name="current_battery">Current device power is :</string>
    <string name="connect_device">Please connect the device and try again！</string>
    <string name="pull_to_refresh_pull_label">Pull to refresh</string>
    <string name="string_update_time">Last update：%s</string>
    <string name="string_refreshing">Scanning bluetooth…</string>
    <string name="scan_over">End of scan</string>
    <string name="release_to_refresh_pull_label">Loosen the refresh</string>
    <string name="loading_error">Click on the load</string>
    <string name="loading_wait">Getting more…</string>
    <string name="click_for_loading_more">Click load more</string>
    <string name="all_has_show">All content has been shown</string>
    <string name="list_click">Click on the screen to reload</string>
    <string name="list_empty">have nothing data</string>
    <string name="devices">Device List</string>
    <string name="failedOperation">Operation failure!</string>
    <string name="connecting">connecting</string>
    <string name="connecting_auto">Automatic connection</string>
    <string name="refreshheadupdate">Last updated on:just</string>
    <string name="quick_hint">Tip: multiple messages can be selected to be sent simultaneously</string>
    <string name="screen_size_12">12xN</string>
    <string name="screen_size_16">16xN</string>
    <string name="screen_size_3232">32x32</string>
    <string name="screen_size_4048">40x48</string>
    <string name="pre">Color</string>
    <string name="after">Font</string>
    <string name="color_auto">Auto_Color</string>
    <string name="color_manual">User_defined</string>
    <string name="preview">Preview</string>
    <string name="color_font">Font_color</string>
    <string name="color_back">BGColor</string>
    <string name="color_model">Color_Mode</string>
    <string name="gallery_inlay">Built-in image</string>
    <string name="gallery_custom">Custom image</string>
    <string name="gallery_gif">Gif</string>
    <string name="undo">Last Step</string>
    <string name="reset">Clear</string>
    <string name="save">Save</string>
    <string name="save_as">Save as</string>
    <string name="storage_method">Storage method</string>
    <string name="dimensions">Dimensions：</string>
    <string name="fixation_color">Color</string>
    <string name="text_hit">Edit text</string>
    <string name="no_data">Have no data</string>
    <string name="code_enter_at">Enter AT mode successfully</string>
    <string name="code_try_rename">Trying to rename the bluetooth……</string>
    <string name="code_ble_name">Bluetooth name： </string>
    <string name="code_change_to"> change to： </string>
    <string name="code_rename_succeed">The name has been changed successfully, and the bluetooth module will take effect after restarting！</string>
    <string name="code_ble_restarting">Attempting to restart the bluetooth module……</string>
    <string name="code_disconnect_ble">Successful operation, bluetooth will be disconnected！</string>
    <string name="code_close_ble">To refresh the changed device, restart your phone bluetooth！</string>
    <string name="code_exist_at">Exit AT mode</string>
    <string name="code_error">Error code</string>
    <string name="dfu_selected_file">Selected File</string>
    <string name="dfu_file_name">Selected File</string>
    <string name="dfu_file_size">Selected File</string>
    <string name="dfu_upload">Selected File</string>
    <string name="sub_1">Click to share </string>
    <string name="sub_2"> or </string>
    <string name="sub_3"> download</string>
    <string name="qr_code"> QR Code </string>
    <string name="url_download"> downurls </string>
    <string name="sharedescroption">Tip: after entering, click "access the original web page" to open and download with the browser!</string>
    <string name="help">Help</string>
    <string name="about">About APP</string>
    <string name="gif">Animation</string>
    <string name="gallery">Gallery</string>
    <string name="palte">Painted Palette</string>
    <string name="set_data_time">Set Data And Time Color</string>
    <string name="device_dfu">Device version upgrade</string>
    <string name="data_time">Show Data And Time</string>
    <string name="light_control">Control Light</string>
    <string name="palte_simplename">Palette</string>
    <string name="diy">DIY</string>
    <string name="other">Other</string>
    <string name="PhotoGallery">Photo Gallery</string>
    <string name="music">Sync music</string>
    <string name="music_simplename">Music</string>
    <string name="text">Text</string>
    <string name="quick_edit">Quick Send</string>
    <string name="back">Back</string>
    <string name="home">Home</string>
    <string name="control_close">Close</string>
    <string name="control_open">Open</string>
    <string name="control_flash">Flash</string>
    <string name="operating_manual">
       APP operate instruction:\n
1.Download the APP operating software\n
scan the two-dimensional code and Select the corresponding system to download;
After installing the app successfully , The name displayed is “LEDILove”\n

2.Edit text and send\n
First, Turn on LED display, mobile Bluetooth and APP software\n
Second, Click APP Bluetooth signal search function, select the corresponding Bluetooth signal and click Connect\n
Third, display content, select the appropriate font size, font, icon, font color,Scenery, information number (1-8) and mobile mode.\n
Fourth, Click the Settings button in the upper right corner to set the information speed, brightness and send list.\n
Finally, after editing the text, Click “OK and send” button.\n

3. The LED screen displays the information successfully\n
    </string>
    <string name="helpMessage">
        Problem: \n
        bluetooth connection timeout/send operation timeout/send failure\n
        solution：\n
1. Please confirm whether the connected device is matched with this APP (refer to the instruction manual)\n
2. Please ensure that the operation device is online (Can communication)\n
3. Open space within 10 steps (RSSI value is greater than -90)\n
Try to avoid obstacles.\n
If none of the above problems, please restart the device and mobile phone bluetooth retry!</string>
    <string name="ver_head">current version：V</string>
    <string name="aboutMessage">LED display control software,
        an LED display product control terminal based on low-power bluetooth 4.0 technology,
With product communication, you can edit and add custom information,
Support information left, right, shift, down, snowflake,
        running horse lamp and other animation modes, support text movement speed,
        brightness, switch Settings. Support Chinese, English and other languages.</string>
    <string name="shar_app">Share </string>
    <string name="app_download">http://www.xn--led-f00fr20c.com:8081/</string>
    <string name="app_update">Discover the new version and update it.</string>
    <string name="app_new">It\'s the latest version.</string>
    <string name="refresh_tip">Drop-down refresh device list</string>
    <string name="shift_auto">Auto/Custom</string>
    <string name="model_color">Color_Mode</string>
    <string name="netWorkTimeOout">Get the information timeout, check the network!</string>
    <string name="netWorkConntect">Getting version information...</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>