<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/head_bg_low"
    android:orientation="vertical">
    <TextView
        android:id="@+id/tv_share_to"
        android:textColor="@color/white"
        android:paddingTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
<LinearLayout
    android:layout_margin="5dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <LinearLayout
        android:id="@+id/ll_share_friend"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:src="@mipmap/icon64_wx_logo"
            android:layout_height="wrap_content" />
        <TextView
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/friend"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_share_moments"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:src="@mipmap/icon_res_download_moments"
            android:layout_height="wrap_content" />
        <TextView
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moments"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_share_qq_friend"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:src="@mipmap/ic_qq_friend"
            android:layout_height="wrap_content" />
        <TextView
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qq_friend"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_share_qq_zone"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:src="@mipmap/ic_qq_zone"
            android:layout_height="wrap_content" />
        <TextView
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qq_zone"/>
    </LinearLayout>


</LinearLayout>
    <TextView
        android:id="@+id/tv_share_cancel"
        android:layout_margin="5dp"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"/>
</LinearLayout>