<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/head_bg_new"
    android:layout_height="match_parent">
    <RadioGroup
        android:id="@+id/rg_gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/head_bg_low"
        android:padding="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/rb_gallery_inlay"
            android:layout_width="0dp"
            android:button="@null"
            android:layout_weight="1"
            android:textSize="15sp"
            android:gravity="center"
            android:paddingLeft="0dp"
            android:layout_height="wrap_content"
            android:text="@string/gallery_inlay"/>
        <RadioButton
            android:id="@+id/rb_gallery_custom"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="15sp"
            android:button="@null"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/gallery_custom"/>
        <RadioButton
            android:id="@+id/rb_gallery_gif"
            android:layout_width="0dp"
            android:button="@null"
            android:layout_weight="1"
            android:paddingRight="20dp"
            android:textSize="15sp"
            android:gravity="right"
            android:layout_height="wrap_content"
            android:text="@string/gallery_gif"/>
    </RadioGroup>
    <android.support.v4.view.ViewPager
        android:layout_below="@id/rg_gallery"
        android:id="@+id/vp_gallery_frame"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"/>
</RelativeLayout>