<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/head_bg_new"
    tools:context="xc.LEDILove.activity.MainActivity">
    <include
        android:id="@+id/include"
        layout="@layout/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:id="@+id/rg_main_item_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@color/head_bg_low"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp">
        <RadioButton
            android:id="@+id/rb_palette"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/selector_mian_diy"
            android:gravity="center"
            android:text="@string/diy"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/rb_gallery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/selector_mian_gif"
            android:gravity="center"
            android:text="@string/gallery"
            android:textSize="12sp" />
        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center" />




        <RadioButton
            android:id="@+id/rb_music"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/selector_mian_music"
            android:gravity="center"
            android:text="@string/music_simplename"
            android:textSize="12sp" />
        <RadioButton
            android:id="@+id/rb_edit_quick"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/selector_mian_controler"
            android:gravity="center"
            android:text="@string/quick_edit"
            android:textSize="12sp" />

    </RadioGroup>

    <FrameLayout
        android:id="@+id/fragment_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/rg_main_item_select"
        android:layout_below="@id/include"
        />
    <xc.LEDILove.view.NoScrollViewPager
        android:visibility="gone"
        android:id="@+id/vp_main_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/include"
        android:layout_above="@id/rg_main_item_select"/>

    <LinearLayout
        android:id="@+id/ll_mode_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:paddingBottom="5dp">

        <ImageButton
            android:id="@+id/iv_main_send"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/shape_mian_imagebutton"
            android:scaleType="center"
            android:src="@mipmap/ic_menu_send" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/send"
            android:textColor="@color/head_bg_new"
            android:textSize="12sp" />
    </LinearLayout>
</RelativeLayout>
