<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/head_bg_new"
    android:orientation="vertical"
    tools:context="xc.LEDILove.activity.MEditActivity">
    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/head_bg_low"/>
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:id="@+id/ll_display"
                android:background="@drawable/black_bg"
                android:padding="5dp">

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <FrameLayout
                        android:id="@+id/ledView"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"/>
                </HorizontalScrollView>

            </LinearLayout>
            <RadioGroup
                android:id="@+id/rg_font_color_select"
                android:layout_below="@id/ll_display"
                android:layout_width="match_parent"
                android:layout_marginRight="15dp"
                android:layout_marginTop="13dp"
                android:layout_marginLeft="15dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/rb_font"
                    android:button="@null"
                    android:text="@string/after"
                    android:paddingBottom="2dp"
                    android:paddingTop="2dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:background="@drawable/selector_radiogroup_item"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:id="@+id/rb_color"
                    android:gravity="center"
                    android:paddingBottom="2dp"
                    android:paddingTop="2dp"
                    android:button="@null"
                    android:text="@string/pre"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/selector_radiogroup_item"
                    android:layout_height="wrap_content" />
            </RadioGroup>
            <android.support.v4.view.ViewPager
                android:layout_below="@id/rg_font_color_select"
                android:id="@+id/vp_selector"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="3dp"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:layout_width="match_parent"
                android:layout_height="100dp"/>
            <LinearLayout
                android:visibility="gone"
                android:id="@+id/ll_navigation"
                android:layout_below="@id/vp_selector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/iv_navigation_left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_viepager_image_left"
                    android:src="@mipmap/ic_keyboard_arrow_left_black_24dp"/>
                <TextView
                    android:id="@+id/tv_navigation_index"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="10sp"
                    android:text="第1页"/>
                <ImageView
                    android:id="@+id/iv_navigation_right"
                    android:layout_width="wrap_content"
                    android:background="@drawable/selector_viepager_image_left"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_keyboard_arrow_right_black_24dp"/>
            </LinearLayout>
            <RelativeLayout
                android:visibility="gone"
                android:id="@+id/rl_point"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                >

                <LinearLayout
                    android:id="@+id/linLay_guide_pointContainer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" />

                <ImageView
                    android:id="@+id/iv_guide_redPoint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/shape_point_red" />
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_below="@id/ll_navigation"
                android:id="@+id/ll_text_single"
                android:orientation="vertical">



                <xc.LEDILove.widget.ClearEditText
                    android:id="@+id/clearEditText"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/edittext_bg"
                    android:padding="5dp"
                    android:singleLine="true"
                    android:inputType="textAutoComplete"
                    android:imeOptions="actionSend"
                    android:text="" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_below="@id/ll_text_single"
                android:id="@+id/ll_move_mould"
                android:background="@color/head_bg_low"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pageEffectAndModeSetting"
                    android:textColor="@color/text_color_yellow"
                    android:textSize="14sp" />

                <android.support.v7.widget.RecyclerView
                    android:layout_marginTop="5dp"
                    android:id="@+id/recyclerview_brightness"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerview_model"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>
            <Button
                android:id="@+id/btn_fragment_text_send"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="5dp"
                android:textAllCaps="false"
                android:layout_alignParentBottom="true"
                android:layout_below="@id/ll_move_mould"
                android:background="@drawable/selector_btn_black"
                android:text="@string/comfirmAndSend" />
        </RelativeLayout>
    </ScrollView>

</LinearLayout>
